--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ https://github.com/github/gitignore/blob/main/Unity.gitignore
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+
+/build/*
+/Assets/Firebase/*
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
