--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ https://github.com/github/gitignore/blob/main/Unity.gitignore
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
-
+*.icloud
 /build/*
 /Assets/Firebase/*
 
