player dies when colliding w enemy

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ directory
 .DS_Store
 # Get latest from 
 https://github.com/github/gitignore/blob/main/Unity.gitignore
+.vscode
 #
 /[Ll]ibrary/
 /[Tt]emp/
