--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.development": "1.0.2",
     "com.unity.learn.iet-framework": "4.1.3",
+    "com.unity.mobile.notifications": "2.4.1",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.postprocessing": "3.5.0",
     "com.unity.render-pipelines.universal": "17.1.0",
