--- a/Admin/package.json
+++ b/Admin/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0"
   }
 }
