exclude ios build

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ https://github.com/github/gitignore/blob/main/Unity.gitignore
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-
+/ios-build/
 *.icloud
 /build/*
 /Assets/Firebase/*
