--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ https://github.com/github/gitignore/blob/main/Unity.gitignore
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /ios-build/
+/ios-builds/
 *.icloud
 /build/*
 /Assets/Firebase/*
