re create functions

--- a/Admin/firebase.json
+++ b/Admin/firebase.json
@@ -1,8 +1,8 @@
 {
   "functions": [
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "new-functions",
+      "codebase": "new-functions",
       "ignore": [
         "node_modules",
         ".git",
